# lab7_SYAITP

./: CMakeLists.txt  Main.qml  database.cpp  database.db  database.h  listmodel.cpp  listmodel.h  listmodel.js  main.cpp
